@@ -77,10 +77,11 @@ public class SizeEstimatesRecorder extends SchemaChangeListener implements Runna
                 long start = System.nanoTime();
                 recordSizeEstimates(table, localRanges);
                 long passed = System.nanoTime() - start;
-                logger.trace("Spent {} milliseconds on estimating {}.{} size",
-                             TimeUnit.NANOSECONDS.toMillis(passed),
-                             table.metadata.keyspace,
-                             table.metadata.name);
+                if (logger.isTraceEnabled())
+                    logger.trace("Spent {} milliseconds on estimating {}.{} size",
+                                 TimeUnit.NANOSECONDS.toMillis(passed),
+                                 table.metadata.keyspace,
+                                 table.metadata.name);
             }
         }
     }
